[tool.poetry]
name = "klipper-repl"
version = "0.2.0"
description = "The missing Klipper command line"
authors = ["Jordan Mulcahey <snhjordy@gmail.com>"]
readme = "README.md"
packages = [{include = "klipper_repl"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.38"
pygments = "^2.15.1"

[tool.poetry.scripts]
klipper-repl = "klipper_repl.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
